# speech2text

./: .gitignore  Dockerfile.build  LICENSE  README.md  build_task.py  cif_task.py  ctc_task.py  format.sh  inference.py  requirements.txt  rnnt_task.py  ssl_task.py
callbacks/: callbacks.py
config/inference/: cif_greedy_search.yaml  ctc_beam_search.yaml  ctc_greedy_search.yaml  ctc_hybrid_rnnt_greedy_search.yaml  ctc_inference.yaml  pruned_rnnt_ctc_greedy_search.yaml  pruned_rnnt_greedy_search.yaml  rnnt_beam_search.yaml  rnnt_greedy_search.yaml  zipformer_stateless_pruned_rnnt_beam_search.yaml
config/training/: conformer_cif.yaml  conformer_ctc.yaml  conformer_hybrid_rnnt.yaml  conformer_pruned_rnnt.yaml  conformer_rnnt.yaml  conformer_ssl.yaml  conformer_stateless_pruned_rnnt.yaml  emformer_ctc.yaml  rnn_lm.yaml  wav2vec2_ctc.yaml  zipformer_stateless_pruned_rnnt.yaml
dataset/: .gitignore  dataset.py  dataset_test.py  sampler.py  sampler_test.py  utils.py  utils_test.py
dataset/frontend/: frontend.py  (+2 more)
model/: .gitignore  decoding.py  decoding_test.py  utils.py  utils_test.py
optimizer/: optim_setup.py  scaled_adam.py
runtime/: CMakeLists.txt
runtime/asr_rt/: CMakeLists.txt  dummy.h
runtime/asr_rt/decoding/: CMakeLists.txt  fl_decoder_test.cc
runtime/cmake/: flashlight_text.cmake  gflags.cmake  glog.cmake  googletest.cmake  libtorch.cmake
sample_data/: asr_eval_data.json  asr_train_data.json  noise_data.json
task_factory/: asr_inference.py  cif_task.py  ctc_task.py  nnlm_task.py  rnnt_task.py  ssl_task.py
tools/: model_average.py  spm_train.py
(+43 files in other folders)
